add retry.html from new branch

--- a/retry.html
+++ b/retry.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Hello Again!! again and again
+     Again!! again and again never give up
 </body>
 </html>
